# Fin

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build_output.txt  features.md
cmake/: FinSources.cmake
docs/: ARCHITECTURE.md
scripts/: ui_smoke.ps1
scripts/ui/: README.md  smoke_actions.json
src/: Compiler.cpp  EditorLogic.cpp  EditorLogic.h  EditorTab.h  LSPClient.cpp  LSPClient.h  Terminal.h  ThemeManager.cpp  ThemeManager.h  Utils.cpp  Utils.h  main.cpp
src/App/: FinApp.cpp  FinApp.h  FinCompletionLocal.cpp  FinCompletionLocal.h  FinCompletionUi.cpp  FinCompletionUi.h  FinDockingUi.cpp  FinDockingUi.h  FinEditorAssists.cpp  FinEditorAssists.h  FinHelpers.cpp  FinHelpers.h  FinI18n.cpp  FinI18n.h  FinStatusBar.cpp  FinStatusBar.h  FinTypes.h
src/App/Panels/: ConsolePanel.cpp  ConsolePanel.h  EditorPanel.cpp  EditorPanel.h  ExplorerPanel.cpp  ExplorerPanel.h  LspDiagnosticsPanel.cpp  LspDiagnosticsPanel.h  PersonalizationPanel.cpp  PersonalizationPanel.h  SettingsPanel.cpp  SettingsPanel.h  TerminalPanel.cpp  TerminalPanel.h
src/Core/: AppConfig.h  Compiler.cpp  Compiler.h  ConfigManager.cpp  ConfigManager.h  FileManager.cpp  FileManager.h  LSPClient.cpp  LSPClient.h  Terminal.cpp
src/Editor/: AutocompleteLogic.cpp  AutocompleteLogic.h  EditorLogic.cpp  EditorLogic.h  EditorTab.h  SearchLogic.cpp  SearchLogic.h  ThemeManager.h
src/UI/: AutocompletePopup.cpp  AutocompletePopup.h  ConsolePanel.cpp  ConsolePanel.h  ExplorerPanel.cpp  ExplorerPanel.h  MenuBar.cpp  MenuBar.h  SettingsPanel.cpp  SettingsPanel.h  TerminalPanel.cpp  TerminalPanel.h
